--- a/app/src/main/res/layout/a_man.xml
+++ b/app/src/main/res/layout/a_man.xml
@@ -16,7 +16,7 @@
 		android:textSize="12sp"
 		android:textColor="#000000"/>
 	<TextView
-		android:id="@+id/textview2"
+		android:id="@+id/e_task_description"
 		android:focusable="false"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
