--- a/app/src/main/res/layout/auth.xml
+++ b/app/src/main/res/layout/auth.xml
@@ -59,7 +59,7 @@
 				android:padding="8dp"
 				android:orientation="vertical">
 				<TextView
-					android:id="@+id/textview2"
+					android:id="@+id/e_task_description"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:padding="8dp"
