--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -12,7 +12,7 @@
 		android:padding="8dp"
 		android:orientation="vertical">
 		<TextView
-			android:id="@+id/textview2"
+			android:id="@+id/e_task_description"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginTop="10dp"
