--- a/app/src/main/res/layout/task.xml
+++ b/app/src/main/res/layout/task.xml
@@ -11,30 +11,30 @@
 		android:layout_height="match_parent"
 		android:padding="8dp"
 		android:orientation="vertical">
-		<TextView
-			android:id="@+id/textview1"
-			android:layout_width="wrap_content"
+
+		<EditText
+			android:id="@+id/e_task_description"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
+			android:hint="Описание задания"
+			android:minHeight="48dp"
 			android:padding="8dp"
-			android:text="TextView"
-			android:textSize="12sp"
-			android:textColor="#000000"/>
-		<TextView
-			android:id="@+id/textview2"
-			android:layout_width="wrap_content"
+			android:textColor="#000000"
+			android:textSize="16sp" />
+
+		<Spinner
+			android:id="@+id/spin_master"
+			style="@style/Widget.AppCompat.Spinner.DropDown"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:padding="8dp"
-			android:text="TextView"
-			android:textSize="12sp"
-			android:textColor="#000000"/>
-		<TextView
-			android:id="@+id/textview3"
-			android:layout_width="wrap_content"
+			android:minHeight="48dp" />
+
+		<Spinner
+			android:id="@+id/spin_spec"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:padding="8dp"
-			android:text="TextView"
-			android:textSize="12sp"
-			android:textColor="#000000"/>
+			android:minHeight="48dp" />
+
 		<Button
 			android:id="@+id/b_approve"
 			android:layout_width="wrap_content"
@@ -44,20 +44,29 @@
 			android:textSize="12sp"
 			android:textColor="#000000"
 			android:layout_gravity="right"/>
+
+		<Button
+			android:id="@+id/b_create"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:text="Новое задание" />
+
 		<ListView
 			android:id="@+id/lv_reports"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
 			android:choiceMode="none"
 			android:layout_weight="1"/>
+
 		<Button
 			android:id="@+id/b_add_report"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
+			android:layout_gravity="right"
 			android:padding="8dp"
-			android:text="Дополнил отчёт"
-			android:textSize="12sp"
+			android:text="Дополнить отчёт"
 			android:textColor="#000000"
-			android:layout_gravity="right"/>
+			android:textSize="12sp" />
+
 	</LinearLayout>
 </LinearLayout>
