--- a/app/src/main/res/layout/tasks.xml
+++ b/app/src/main/res/layout/tasks.xml
@@ -1,47 +1,61 @@
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:orientation="vertical">
+
 	<LinearLayout
 		android:id="@+id/linear1"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:orientation="vertical">
+
 		<LinearLayout
 			android:id="@+id/linear2"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:orientation="horizontal">
+
 			<Button
 				android:id="@+id/button1"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:layout_margin="4dp"
+				android:layout_weight="1"
 				android:padding="8dp"
 				android:text="В работе"
-				android:textSize="12sp"
 				android:textColor="#000000"
-				android:layout_weight="1"/>
+				android:textSize="12sp" />
+
 			<Button
 				android:id="@+id/button2"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:layout_margin="4dp"
+				android:layout_weight="1"
 				android:padding="8dp"
 				android:text="Завершено"
-				android:textSize="12sp"
 				android:textColor="#000000"
-				android:layout_weight="1"/>
+				android:textSize="12sp" />
 		</LinearLayout>
+
 		<ListView
 			android:id="@+id/lv_tasks"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:dividerHeight="0dp"
+			android:choiceMode="none"
 			android:divider="@null"
-			android:choiceMode="none"/>
+			android:dividerHeight="0dp" />
 	</LinearLayout>
-</LinearLayout>
+
+	<com.google.android.material.floatingactionbutton.FloatingActionButton
+		android:id="@+id/fab_add_task"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="bottom|end"
+		android:layout_marginEnd="32dp"
+		android:layout_marginBottom="48dp"
+		android:clickable="true"
+		app:srcCompat="@drawable/ic_baseline_add_24" />
+</FrameLayout>
