--- a/app/src/main/res/layout/task.xml
+++ b/app/src/main/res/layout/task.xml
@@ -27,13 +27,16 @@
 			style="@style/Widget.AppCompat.Spinner.DropDown"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
+			android:contentDescription="Имя мастера"
 			android:minHeight="48dp" />
 
 		<Spinner
 			android:id="@+id/spin_spec"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:minHeight="48dp" />
+			android:contentDescription="Специальзация мастера"
+			android:minHeight="48dp"
+			tools:ignore="SpeakableTextPresentCheck" />
 
 		<Button
 			android:id="@+id/b_approve"
