--- a/app/src/main/res/layout/task.xml
+++ b/app/src/main/res/layout/task.xml
@@ -42,17 +42,17 @@
 			android:id="@+id/b_approve"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
+			android:layout_gravity="right"
 			android:padding="8dp"
-			android:text="Выполнен"
-			android:textSize="12sp"
+			android:text="Это задание выполнено"
 			android:textColor="#000000"
-			android:layout_gravity="right"/>
+			android:textSize="12sp" />
 
 		<Button
 			android:id="@+id/b_create"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:text="Новое задание" />
+			android:text="Создать это задание" />
 
 		<ListView
 			android:id="@+id/lv_reports"
