--- a/app/src/main/res/layout/a_man.xml
+++ b/app/src/main/res/layout/a_man.xml
@@ -6,7 +6,7 @@
 	android:layout_height="match_parent"
 	android:orientation="vertical">
 	<TextView
-		android:id="@+id/textview1"
+		android:id="@+id/t_description"
 		android:focusable="false"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
