--- a/app/src/main/res/layout/a_task.xml
+++ b/app/src/main/res/layout/a_task.xml
@@ -5,8 +5,29 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:orientation="vertical">
+
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal">
+
+		<TextView
+			android:id="@+id/textView"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginEnd="8dp"
+			android:layout_weight="0"
+			android:text="Мастер:" />
+
+		<TextView
+			android:id="@+id/t_fio"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_weight="0" />
+	</LinearLayout>
+
 	<TextView
-		android:id="@+id/textview1"
+		android:id="@+id/t_description"
 		android:focusable="false"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
