--- a/app/src/main/res/layout/auth.xml
+++ b/app/src/main/res/layout/auth.xml
@@ -25,7 +25,7 @@
 				android:padding="8dp"
 				android:orientation="vertical">
 				<TextView
-					android:id="@+id/textview1"
+					android:id="@+id/t_description"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:padding="8dp"
