--- a/app/src/main/res/layout/a_task.xml
+++ b/app/src/main/res/layout/a_task.xml
@@ -1,15 +1,19 @@
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
+	android:layout_height="wrap_content"
+	android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
 	android:orientation="vertical">
 
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:orientation="horizontal">
+		android:orientation="horizontal"
+		android:paddingStart="4dp"
+		android:paddingTop="4dp"
+		android:paddingEnd="4dp"
+		android:paddingBottom="0dp">
 
 		<TextView
 			android:id="@+id/textView"
@@ -21,18 +25,22 @@
 
 		<TextView
 			android:id="@+id/t_fio"
-			android:layout_width="wrap_content"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_weight="0" />
 	</LinearLayout>
 
 	<TextView
 		android:id="@+id/t_description"
-		android:focusable="false"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:padding="8dp"
+		android:layout_marginStart="4dp"
+		android:layout_marginTop="0dp"
+		android:layout_marginEnd="4dp"
+		android:layout_marginBottom="4dp"
+		android:focusable="false"
 		android:text="TextView"
-		android:textSize="12sp"
-		android:textColor="#000000"/>
+		android:textColor="#000000"
+		android:textSize="12sp" />
+
 </LinearLayout>
