--- a/app/src/main/res/layout/report.xml
+++ b/app/src/main/res/layout/report.xml
@@ -4,4 +4,29 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="#00BCD4"
-	android:orientation="vertical" />
+	android:orientation="vertical" >
+
+	<TextView
+		android:id="@+id/t_label"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="4dp"
+		android:layout_marginTop="4dp"
+		android:layout_marginEnd="4dp"
+		android:text="Описание отчёта" />
+
+	<EditText
+		android:id="@+id/e_description"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
+		android:ems="10"
+		android:inputType="text"
+		android:padding="8dp" />
+
+	<Button
+		android:id="@+id/b_report_save"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:text="Сохранить отчёт" />
+</LinearLayout>
