--- a/app/src/main/res/layout/a_report.xml
+++ b/app/src/main/res/layout/a_report.xml
@@ -1,37 +1,54 @@
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:orientation="vertical">
+	android:layout_height="wrap_content"
+	android:orientation="vertical"
+	android:padding="4dp">
+
 	<LinearLayout
 		android:id="@+id/linear1"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:orientation="horizontal">
+
 		<ImageView
 			android:id="@+id/i_images"
-			android:focusable="false"
 			android:layout_width="60dp"
 			android:layout_height="60dp"
-			android:src="@drawable/ic_images"
-			android:scaleType="fitCenter"/>
+			android:focusable="false"
+			android:scaleType="fitCenter"
+			android:src="@drawable/ic_images" />
+
 		<LinearLayout
 			android:id="@+id/linear2"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:orientation="vertical">
+
 			<TextView
 				android:id="@+id/t_desc"
-				android:focusable="false"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:padding="8dp"
+				android:layout_margin="4dp"
+				android:ellipsize="end"
+				android:focusable="false"
+				android:lines="3"
+				android:padding="0dp"
 				android:text="TextView"
-				android:textSize="12sp"
 				android:textColor="#000000"
-				android:lines="2"/>
+				android:textSize="12sp" />
 		</LinearLayout>
 	</LinearLayout>
-</LinearLayout>
+
+	<TextView
+		android:id="@+id/t_date"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="bottom|end"
+		android:shadowColor="#DA00FF"
+		android:shadowRadius="10.0"
+		android:text="00.00.0000"
+		android:textSize="10sp"
+		android:textStyle="italic" />
+</FrameLayout>
