--- a/app/src/main/res/layout/task.xml
+++ b/app/src/main/res/layout/task.xml
@@ -46,21 +46,30 @@
 			android:id="@+id/l_dates"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:orientation="horizontal">
+			android:orientation="vertical">
 
 			<LinearLayout
 				android:id="@+id/l_date_start"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:layout_weight="1"
-				android:gravity="center_horizontal"
+				android:gravity="center"
 				android:orientation="horizontal">
 
 				<TextView
-					android:id="@+id/t_date_start"
-					android:layout_width="wrap_content"
+					android:id="@+id/t_label_start"
+					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:text="TextView" />
+					android:layout_weight="1"
+					android:text="Начать задание" />
+
+				<TextView
+					android:id="@+id/t_date_start"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_weight="1"
+					android:gravity="center_horizontal"
+					android:text="00.00.0000" />
 
 				<ImageView
 					android:id="@+id/i_date_start"
@@ -74,14 +83,23 @@
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:layout_weight="1"
-				android:gravity="center_horizontal"
+				android:gravity="center"
 				android:orientation="horizontal">
 
 				<TextView
-					android:id="@+id/t_date_finish"
-					android:layout_width="wrap_content"
+					android:id="@+id/t_label_finish"
+					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:text="TextView" />
+					android:layout_weight="1"
+					android:text="Окончить задание" />
+
+				<TextView
+					android:id="@+id/t_date_finish"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_weight="1"
+					android:gravity="center_horizontal"
+					android:text="00.00.0000" />
 
 				<ImageView
 					android:id="@+id/i_date_end"
