--- a/app/src/main/res/layout/task.xml
+++ b/app/src/main/res/layout/task.xml
@@ -37,6 +37,7 @@
 			android:layout_height="wrap_content"
 			android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
 			android:hint="Описание задания"
+			android:lines="3"
 			android:minHeight="48dp"
 			android:padding="8dp"
 			android:textColor="#000000"
@@ -53,8 +54,11 @@
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:layout_weight="1"
+				android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
 				android:gravity="center"
-				android:orientation="horizontal">
+				android:orientation="horizontal"
+				android:paddingStart="8dp"
+				android:paddingEnd="8dp">
 
 				<TextView
 					android:id="@+id/t_label_start"
@@ -83,8 +87,11 @@
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:layout_weight="1"
+				android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
 				android:gravity="center"
-				android:orientation="horizontal">
+				android:orientation="horizontal"
+				android:paddingStart="8dp"
+				android:paddingEnd="8dp">
 
 				<TextView
 					android:id="@+id/t_label_finish"
@@ -102,7 +109,7 @@
 					android:text="00.00.0000" />
 
 				<ImageView
-					android:id="@+id/i_date_end"
+					android:id="@+id/i_date_finish"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					app:srcCompat="@drawable/ic_calendar" />
