--- a/app/src/main/res/layout/report.xml
+++ b/app/src/main/res/layout/report.xml
@@ -31,4 +31,16 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:text="Сохранить отчёт" />
+
+	<androidx.recyclerview.widget.RecyclerView
+		android:id="@+id/rv_pictures"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_weight="1" />
+
+	<Button
+		android:id="@+id/b_add_picture"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:text="Добавить фото" />
 </LinearLayout>
