--- a/app/src/main/res/layout/a_picture.xml
+++ b/app/src/main/res/layout/a_picture.xml
@@ -2,12 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/i_picture"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="fitCenter"
-        app:srcCompat="@drawable/default_image" />
+        android:layout_height="wrap_content"
+        android:scaleType="fitCenter" />
 </LinearLayout>
