--- a/app/src/main/res/layout/a_task.xml
+++ b/app/src/main/res/layout/a_task.xml
@@ -43,4 +43,11 @@
 		android:textColor="#000000"
 		android:textSize="12sp" />
 
+	<TextView
+		android:id="@+id/t_task_date"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="end"
+		android:text="TextView" />
+
 </LinearLayout>
