--- a/app/src/main/res/layout/a_report.xml
+++ b/app/src/main/res/layout/a_report.xml
@@ -35,9 +35,28 @@
 				android:focusable="false"
 				android:lines="3"
 				android:padding="0dp"
-				android:text="TextView"
 				android:textColor="#000000"
 				android:textSize="12sp" />
+
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:orientation="horizontal">
+
+				<TextView
+					android:id="@+id/textView2"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="@string/report_master" />
+
+				<TextView
+					android:id="@+id/t_repFIO"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_weight="0"
+					android:text="TextView" />
+			</LinearLayout>
+
 		</LinearLayout>
 	</LinearLayout>
 
@@ -46,8 +65,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="bottom|end"
-		android:shadowColor="#DA00FF"
-		android:shadowRadius="10.0"
+		android:layout_marginTop="8dp"
 		android:text="00.00.0000"
 		android:textSize="10sp"
 		android:textStyle="italic" />
