--- a/app/src/main/res/layout/task.xml
+++ b/app/src/main/res/layout/task.xml
@@ -114,23 +114,32 @@
 					android:layout_height="wrap_content"
 					app:srcCompat="@drawable/ic_calendar" />
 			</LinearLayout>
+
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:layout_weight="1"
+				android:orientation="horizontal">
+
+				<Button
+					android:id="@+id/b_create"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:layout_weight="1"
+					android:text="Создать это задание" />
+
+				<Button
+					android:id="@+id/b_approve"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:layout_gravity="right"
+					android:layout_weight="1"
+					android:padding="8dp"
+					android:text="Это задание выполнено"
+					android:textColor="#000000"
+					android:textSize="12sp" />
+			</LinearLayout>
 		</LinearLayout>
-
-		<Button
-			android:id="@+id/b_approve"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_gravity="right"
-			android:padding="8dp"
-			android:text="Это задание выполнено"
-			android:textColor="#000000"
-			android:textSize="12sp" />
-
-		<Button
-			android:id="@+id/b_create"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:text="Создать это задание" />
 
 		<ListView
 			android:id="@+id/lv_reports"
