--- a/app/src/main/res/layout/a_task.xml
+++ b/app/src/main/res/layout/a_task.xml
@@ -21,7 +21,7 @@
 			android:layout_height="wrap_content"
 			android:layout_marginEnd="8dp"
 			android:layout_weight="0"
-			android:text="Мастер:" />
+			android:text="@string/label_master" />
 
 		<TextView
 			android:id="@+id/t_fio"
@@ -39,7 +39,6 @@
 		android:layout_marginEnd="4dp"
 		android:layout_marginBottom="4dp"
 		android:focusable="false"
-		android:text="TextView"
 		android:textColor="#000000"
 		android:textSize="12sp" />
 
@@ -47,7 +46,6 @@
 		android:id="@+id/t_task_date"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_gravity="end"
-		android:text="TextView" />
+		android:layout_gravity="end" />
 
 </LinearLayout>
