--- a/app/src/main/res/layout/auth.xml
+++ b/app/src/main/res/layout/auth.xml
@@ -29,7 +29,7 @@
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:padding="8dp"
-					android:text="Телефон:"
+					android:text="@string/label_phone"
 					android:textSize="12sp"
 					android:textColor="#000000"/>
 				<EditText
@@ -39,7 +39,7 @@
 					android:padding="8dp"
 					android:textSize="18sp"
 					android:textColor="#000000"
-					android:hint="номер телефона без '+'"
+					android:hint="@string/hint_phone"
 					android:textColorHint="#607D8B"
 					android:inputType="phone"/>
 				<Button
@@ -47,7 +47,7 @@
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:padding="8dp"
-					android:text="Проверить"
+					android:text="@string/button_check"
 					android:textSize="12sp"
 					android:textColor="#000000"
 					android:layout_gravity="right"/>
@@ -63,7 +63,7 @@
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:padding="8dp"
-					android:text="Подтверждение:"
+					android:text="@string/label_acception"
 					android:textSize="12sp"
 					android:textColor="#000000"/>
 				<EditText
@@ -73,7 +73,7 @@
 					android:padding="8dp"
 					android:textSize="18sp"
 					android:textColor="#000000"
-					android:hint="OTP"
+					android:hint="@string/hint_otp"
 					android:textColorHint="#607D8B"
 					android:inputType="numberDecimal"/>
 				<Button
@@ -81,7 +81,7 @@
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:padding="8dp"
-					android:text="Подтвердить"
+					android:text="@string/button_send"
 					android:textSize="12sp"
 					android:textColor="#000000"
 					android:layout_gravity="right"/>
