--- a/app/src/main/res/layout/tasks.xml
+++ b/app/src/main/res/layout/tasks.xml
@@ -25,7 +25,7 @@
 				android:layout_margin="4dp"
 				android:layout_weight="1"
 				android:padding="8dp"
-				android:text="В работе"
+				android:text="@string/button_in_progress"
 				android:textColor="#000000"
 				android:textSize="12sp" />
 
@@ -36,7 +36,7 @@
 				android:layout_margin="4dp"
 				android:layout_weight="1"
 				android:padding="8dp"
-				android:text="Завершено"
+				android:text="@string/button_in_finished"
 				android:textColor="#000000"
 				android:textSize="12sp" />
 		</LinearLayout>
@@ -53,7 +53,7 @@
 			android:id="@+id/b_people"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:text="Люди"
+			android:text="@string/button_list_people"
 			android:visibility="gone" />
 	</LinearLayout>
 
