--- a/app/src/main/res/layout/report.xml
+++ b/app/src/main/res/layout/report.xml
@@ -36,7 +36,8 @@
 	<androidx.recyclerview.widget.RecyclerView
 		android:id="@+id/rv_pictures"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent" />
+		android:layout_height="0dp"
+		android:layout_weight="1" />
 
 	<Button
 		android:id="@+id/b_add_picture"
