--- a/app/src/main/res/layout/tasks.xml
+++ b/app/src/main/res/layout/tasks.xml
@@ -20,7 +20,7 @@
 
 			<Button
 				android:id="@+id/button1"
-				android:layout_width="match_parent"
+				android:layout_width="0dp"
 				android:layout_height="wrap_content"
 				android:layout_margin="4dp"
 				android:layout_weight="1"
@@ -31,7 +31,7 @@
 
 			<Button
 				android:id="@+id/button2"
-				android:layout_width="match_parent"
+				android:layout_width="0dp"
 				android:layout_height="wrap_content"
 				android:layout_margin="4dp"
 				android:layout_weight="1"
@@ -39,13 +39,21 @@
 				android:text="@string/button_in_finished"
 				android:textColor="#000000"
 				android:textSize="12sp" />
+
+			<Button
+				android:id="@+id/b_my_profile"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_margin="4dp"
+				android:layout_weight="0"
+				android:text="@string/button_my_profile"
+				android:textSize="12sp" />
 		</LinearLayout>
 
 		<ListView
 			android:id="@+id/lv_tasks"
 			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_weight="1"
+			android:layout_height="match_parent"
 			android:divider="@null"
 			android:dividerHeight="0dp" />
 
