--- a/app/src/main/res/layout/a_task.xml
+++ b/app/src/main/res/layout/a_task.xml
@@ -25,8 +25,14 @@
 
 		<TextView
 			android:id="@+id/t_fio"
-			android:layout_width="match_parent"
+			android:layout_width="0dp"
 			android:layout_height="wrap_content"
+			android:layout_weight="1" />
+
+		<ImageView
+			android:id="@+id/i_pay_check"
+			android:layout_width="30dp"
+			android:layout_height="30dp"
 			android:layout_weight="0" />
 	</LinearLayout>
 
