--- a/app/src/main/res/layout/task.xml
+++ b/app/src/main/res/layout/task.xml
@@ -116,6 +116,44 @@
 			</LinearLayout>
 
 			<LinearLayout
+				android:id="@+id/l_reward"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:layout_weight="1"
+				android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
+				android:gravity="center_vertical"
+				android:orientation="horizontal"
+				android:paddingStart="8dp"
+				android:paddingEnd="8dp">
+
+				<TextView
+					android:id="@+id/t_reward"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="@string/label_reward" />
+
+				<EditText
+					android:id="@+id/e_reward"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:layout_weight="1"
+					android:ems="10"
+					android:inputType="numberDecimal" />
+
+				<Button
+					android:id="@+id/b_rewarded"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_weight="0"
+					android:text="@string/button_rewarded" />
+
+				<ImageView
+					android:id="@+id/i_reward_got"
+					android:layout_width="30dp"
+					android:layout_height="30dp" />
+			</LinearLayout>
+
+			<LinearLayout
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
 				android:layout_weight="1"
