--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -5,12 +5,13 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:orientation="vertical">
+
 	<LinearLayout
 		android:id="@+id/linear1"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:padding="8dp"
-		android:orientation="vertical">
+		android:orientation="vertical"
+		android:padding="8dp">
 
 		<TextView
 			android:id="@+id/e_task_description"
@@ -30,52 +31,63 @@
 			android:paddingBottom="8dp"
 			android:textColor="#000000"
 			android:textSize="18sp" />
+
 		<TextView
 			android:id="@+id/textview3"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginTop="10dp"
 			android:text="@string/label_fio"
-			android:textSize="12sp"
-			android:textColor="#000000"/>
+			android:textColor="#000000"
+			android:textSize="12sp" />
+
 		<EditText
 			android:id="@+id/e_fio"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
+			android:hint="@string/hint_fio"
+			android:textColorHint="#546E7A"
+			android:inputType="text"
+			android:minHeight="48dp"
 			android:paddingLeft="8dp"
 			android:paddingRight="8dp"
 			android:paddingBottom="8dp"
-			android:textSize="18sp"
 			android:textColor="#000000"
-			android:hint="@string/hint_fio"
-			android:textColorHint="#607D8B"/>
+			android:textSize="18sp"
+			android:importantForAutofill="no" />
+
 		<TextView
 			android:id="@+id/textview4"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginTop="10dp"
 			android:text="@string/label_spec"
-			android:textSize="12sp"
-			android:textColor="#000000"/>
+			android:textColor="#000000"
+			android:textSize="12sp" />
+
 		<EditText
 			android:id="@+id/e_spec"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
+			android:hint="@string/hint_spec"
+			android:textColorHint="#546E7A"
+			android:inputType="text"
+			android:minHeight="48dp"
 			android:paddingLeft="8dp"
 			android:paddingRight="8dp"
 			android:paddingBottom="8dp"
-			android:textSize="18sp"
 			android:textColor="#000000"
-			android:hint="@string/hint_spec"
-			android:textColorHint="#607D8B"/>
+			android:textSize="18sp"
+			android:importantForAutofill="no" />
+
 		<Button
 			android:id="@+id/b_save"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
+			android:layout_gravity="end"
 			android:padding="8dp"
 			android:text="@string/button_save"
-			android:textSize="12sp"
 			android:textColor="#000000"
-			android:layout_gravity="right"/>
+			android:textSize="12sp" />
 	</LinearLayout>
 </LinearLayout>
