--- a/app/src/main/res/layout/activity_payments.xml
+++ b/app/src/main/res/layout/activity_payments.xml
@@ -24,12 +24,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="text"
+            android:importantForAutofill="no"
+            android:inputType="textMultiLine"
             android:maxLines="3"
-            android:minHeight="48dp"
-            android:singleLine="false"
-            tools:ignore="SpeakableTextPresentCheck"
-            android:importantForAutofill="no" />
+            android:minHeight="48dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
