--- a/app/src/main/res/layout/a_loader.xml
+++ b/app/src/main/res/layout/a_loader.xml
@@ -1,16 +1,30 @@
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:orientation="vertical">
-	<ProgressBar
-		android:id="@+id/progressbar1"
-		android:focusable="false"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:padding="8dp"
-		android:indeterminate="false"
-		style="?android:progressBarStyle"/>
-</LinearLayout>
+	android:layout_width="wrap_content"
+	android:layout_height="wrap_content"
+	app:cardCornerRadius="150dp"
+	tools:visibility="visible">
+
+	<FrameLayout
+		android:layout_width="200dp"
+		android:layout_height="200dp">
+
+		<ImageView
+			android:id="@+id/i_logo"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_gravity="center"
+			android:scaleType="fitCenter"
+			app:srcCompat="@drawable/logo" />
+
+		<ProgressBar
+			android:id="@+id/pb"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_gravity="center"
+			android:focusable="false"
+			android:indeterminate="false" />
+	</FrameLayout>
+
+</androidx.cardview.widget.CardView>
