--- a/app/src/main/res/layout/a_payment.xml
+++ b/app/src/main/res/layout/a_payment.xml
@@ -3,32 +3,46 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="top">
+    android:gravity="top"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/t_payment_date"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
-        android:text="@string/def_date" />
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/t_payment_description"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        <TextView
+            android:id="@+id/t_payment_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:text="@string/def_date" />
 
-    <TextView
-        android:id="@+id/t_payment_cost"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:gravity="end"
-        android:text="@string/cost_zero" />
+        <TextView
+            android:id="@+id/t_payment_description"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
-    <ImageView
-        android:id="@+id/i_received"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:contentDescription="@string/payment_received"
-        app:srcCompat="@drawable/ic_not" />
+        <TextView
+            android:id="@+id/t_payment_cost"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:text="@string/cost_zero" />
+
+        <ImageView
+            android:id="@+id/i_received"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:contentDescription="@string/payment_received"
+            app:srcCompat="@drawable/ic_not" />
+    </LinearLayout>
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider" />
+
 </LinearLayout>
