--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -11,80 +11,93 @@
 		android:layout_height="match_parent"
 		android:padding="8dp"
 		android:orientation="vertical">
+
 		<LinearLayout
 			android:id="@+id/l_reg"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			android:padding="8dp"
+			android:layout_weight="1"
+			android:gravity="center_vertical"
 			android:orientation="vertical"
-			android:layout_weight="1">
+			android:padding="8dp">
+
 			<LinearLayout
 				android:id="@+id/l_phone"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:padding="8dp"
-				android:orientation="vertical">
+				android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
+				android:clipChildren="false"
+				android:orientation="vertical"
+				android:padding="8dp">
+
 				<TextView
 					android:id="@+id/t_description"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:padding="8dp"
 					android:text="@string/label_phone"
-					android:textSize="12sp"
-					android:textColor="#000000"/>
+					android:textColor="#000000"
+					android:textSize="12sp" />
+
 				<EditText
 					android:id="@+id/e_num"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:padding="8dp"
-					android:textSize="18sp"
-					android:textColor="#000000"
 					android:hint="@string/hint_phone"
+					android:inputType="phone"
+					android:padding="8dp"
+					android:textColor="#000000"
 					android:textColorHint="#607D8B"
-					android:inputType="phone"/>
+					android:textSize="18sp" />
+
 				<Button
 					android:id="@+id/b_verify_phone"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
+					android:layout_gravity="right"
 					android:padding="8dp"
 					android:text="@string/button_check"
-					android:textSize="12sp"
 					android:textColor="#000000"
-					android:layout_gravity="right"/>
+					android:textSize="12sp" />
 			</LinearLayout>
+
 			<LinearLayout
 				android:id="@+id/l_otp"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:padding="8dp"
-				android:orientation="vertical">
+				android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
+				android:orientation="vertical"
+				android:padding="8dp">
+
 				<TextView
 					android:id="@+id/e_task_description"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:padding="8dp"
 					android:text="@string/label_acception"
-					android:textSize="12sp"
-					android:textColor="#000000"/>
+					android:textColor="#000000"
+					android:textSize="12sp" />
+
 				<EditText
 					android:id="@+id/e_otp"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:padding="8dp"
-					android:textSize="18sp"
-					android:textColor="#000000"
 					android:hint="@string/hint_otp"
+					android:inputType="numberDecimal"
+					android:padding="8dp"
+					android:textColor="#000000"
 					android:textColorHint="#607D8B"
-					android:inputType="numberDecimal"/>
+					android:textSize="18sp" />
+
 				<Button
 					android:id="@+id/b_send_otp"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
+					android:layout_gravity="right"
 					android:padding="8dp"
 					android:text="@string/button_send"
-					android:textSize="12sp"
 					android:textColor="#000000"
-					android:layout_gravity="right"/>
+					android:textSize="12sp" />
 			</LinearLayout>
 		</LinearLayout>
 		<LinearLayout
